fixed icon error + remove scrollbar on mobile

--- a/app/components/gallery/DetailsModal.css
+++ b/app/components/gallery/DetailsModal.css
@@ -12,6 +12,10 @@
     position: relative;
 }
 
+.modal-transparent::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Opera */
+}
+
 @media screen and (max-width: 768px) {
     .modal-transparent::after {
         content: '';
